Clarify theme name
Signed-off-by: Morgan Tocker <tocker@gmail.com>

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					Theme based on <a href="https://unsplash.com">Unsplash</a> with customizations.
+					Theme based on <a href="https://unsplash.com">Caminar</a> with customizations.
 				</div>
 			</footer>
 
