--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							 </li>
 							</ul>
 							
-							Submit a <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5VEHSFtR-hE1mDPZOPvP5gZf5hZ1_R-7qYqwIiOWfkSmLBQ/viewform">suggested topic</a>.
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSc5VEHSFtR-hE1mDPZOPvP5gZf5hZ1_R-7qYqwIiOWfkSmLBQ/viewform">Suggested a new topic</a>.
 						</div>
 					</section>
 
