--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<section id="two" class="wrapper style2">
 						<header>
 							<h2>Schedule</h2>
-							<p>Upcoming Events</p>
+							<p><a href="https://calendar.google.com/calendar/embed?src=dm0us0fnrilngd8jee5i76s680%40group.calendar.google.com">Upcoming Events</a></p>
 						</header>
 						<div class="content">
 
@@ -80,7 +80,7 @@
 							 <li>
 							 	Tuesday April 7th at 8AM-9AM PST<br />
 							 	<strong>Morgan Tocker</strong>, What's changed in <tt>performance_schema</tt> from MySQL 5.6 to MySQL 8.0?<br />
-							 	<a href="#">Calendar Invite</a> <a href="#">Zoom link</a>
+							 	<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MXJocmgxcDNlbmRtMmtpODNxZzZpZ2o1NmwgZG0wdXMwZm5yaWxuZ2Q4amVlNWk3NnM2ODBAZw&tmsrc=dm0us0fnrilngd8jee5i76s680%40group.calendar.google.com">Calendar Invite</a> <a href="#">Zoom link</a>
 							 </li>
 							</ul>
 							
