Update misc wording

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Half-baked conf</title>
+		<title>Half-Baked Conf</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Half-baked conf<span></span></a></div>
+				<div class="logo"><a href="#">Half-Baked Conf<span></span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -40,12 +40,12 @@
 
 							<p>
 							<ul>
-							 <li>Lead discussion on a topic they are a subject matter expert.</li>
+							 <li>Lead discussion on a topic in which you are a subject matter expert</li>
 							 <li>Present demos <em>(it's okay to fail)</em></li>
-							 <li>Answer questions from panelists</li>
+							 <li>Encourage discussion, and questions from panelists</li>
 							</ul>
 
-							<em>Facilitators are encouraged not to use slides. We value your unique expertise over a polished presentation. It is the role of the panelist to come prepared and ask the right questions!</em>
+							<em>Facilitators are encouraged <strong>not</strong> to use slides. We value your unique expertise over a polished presentation. It is the role of the panelist to come prepared and ask the right questions!</em>
 							</p>
 
 							<p>
@@ -56,7 +56,7 @@
 							 <li>Jump in and ask questions, answer questions and drive a good conversation.</li>
 							</ul>
 
-							<em>Panelists are not expected to be experts, and even if they are.. leading questions are encouraged to help the flow of conversation. They are only expected to be engaged!</em>
+							<em>Panelists are not expected to be experts, and even if you are... leading questions are encouraged to help the flow of conversation. We just want you to participate!</em>
 							</p>
 
 							<div id="disclaimer">
@@ -78,9 +78,9 @@
 
 							<ul>
 							 <li>
-							 	Tuesday April 7th at 8AM-9AM PST<br />
-							 	<strong>Morgan Tocker</strong>, What's changed in <tt>performance_schema</tt> from MySQL 5.6 to MySQL 8.0?<br />
-							 	<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MXJocmgxcDNlbmRtMmtpODNxZzZpZ2o1NmwgZG0wdXMwZm5yaWxuZ2Q4amVlNWk3NnM2ODBAZw&tmsrc=dm0us0fnrilngd8jee5i76s680%40group.calendar.google.com">Calendar Invite</a> <a href="#">Zoom link</a>
+								Tuesday April 7th at 8AM-9AM PST<br />
+								<strong>Morgan Tocker</strong>, What's changed in <tt>performance_schema</tt> from MySQL 5.6 to MySQL 8.0?<br />
+								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MXJocmgxcDNlbmRtMmtpODNxZzZpZ2o1NmwgZG0wdXMwZm5yaWxuZ2Q4amVlNWk3NnM2ODBAZw&tmsrc=dm0us0fnrilngd8jee5i76s680%40group.calendar.google.com">Calendar Invite</a> <a href="#">Zoom link</a>
 							 </li>
 							</ul>
 							
