Renamed to DB AMA

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Half-Baked Conf</title>
+		<title>DB AMA</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Half-Baked Conf<span></span></a></div>
+				<div class="logo"><a href="#">DB AMA<span></span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -72,7 +72,7 @@
 					<section id="two" class="wrapper style2">
 						<header>
 							<h2>Schedule</h2>
-							<p><a href="https://calendar.google.com/calendar/embed?src=dm0us0fnrilngd8jee5i76s680%40group.calendar.google.com">Upcoming Events</a></p>
+							<p><a href="https://calendar.google.com/calendar/embed?src=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com&ctz=America%2FEdmonton">Upcoming Events</a></p>
 						</header>
 						<div class="content">
 
@@ -80,11 +80,11 @@
 							 <li>
 								Tuesday April 7th at 8AM-9AM PST<br />
 								<strong>Morgan Tocker</strong>, What's changed in <tt>performance_schema</tt> from MySQL 5.6 to MySQL 8.0?<br />
-								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MXJocmgxcDNlbmRtMmtpODNxZzZpZ2o1NmwgZG0wdXMwZm5yaWxuZ2Q4amVlNWk3NnM2ODBAZw&tmsrc=dm0us0fnrilngd8jee5i76s680%40group.calendar.google.com">Calendar Invite</a> <a href="#">Zoom link</a>
+								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MnJwMDludmZqY2s0NW4xamFicXVtcjY3Y2kgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://zoom.us/j/7366481911">Zoom link</a>
 							 </li>
 							</ul>
 							
-							<a href="https://docs.google.com/forms/d/e/1FAIpQLSc5VEHSFtR-hE1mDPZOPvP5gZf5hZ1_R-7qYqwIiOWfkSmLBQ/viewform">Suggested a new topic</a>.
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggested a new topic</a>.
 						</div>
 					</section>
 
