Add lefred on MySQL shell

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 								<strong>Morgan Tocker</strong>, What's changed in <tt>performance_schema</tt> from MySQL 5.6 to MySQL 8.0?<br />
 								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MnJwMDludmZqY2s0NW4xamFicXVtcjY3Y2kgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://zoom.us/j/7366481911">Zoom link</a>
 							 </li>
+							 <li>
+								Tuesday April 21st at 8AM-9AM PST<br />
+								<strong>Frédéric Descamps (aka Lefred)</strong>, Everything about MySQL Shell!<br />
+								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NWM1Y3Y1cTlkNDVqM2x1NGkzdTRmdmUxb28gcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://zoom.us/j/7366481911">Zoom link</a>
+							 </li>
 							</ul>
 							
 							<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggested a new topic</a>.
