--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							 </li>
 							</ul>
 							
-							<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggested a new topic</a>.
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggest a new topic</a>.
 						</div>
 					</section>
 
