--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 						</div>
 					</section>
 
-				<!-- Two -->
 					<section id="two" class="wrapper style2">
+
 						<header>
 							<h2>Schedule</h2>
 							<p><a href="https://calendar.google.com/calendar/embed?src=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com&ctz=America%2FEdmonton">Upcoming Events</a></p>
@@ -78,20 +78,28 @@
 
 							<ul>
 							 <li>
-								Tuesday April 7th at 8AM-9AM PST<br />
-								<strong>Morgan Tocker</strong>, What's changed in <tt>performance_schema</tt> from MySQL 5.6 to MySQL 8.0?<br />
-								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MnJwMDludmZqY2s0NW4xamFicXVtcjY3Y2kgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://zoom.us/j/7366481911">Zoom link</a>
-							 </li>
-							 <li>
 								Tuesday April 21st at 8AM-9AM PST<br />
 								<strong>Frédéric Descamps (aka Lefred)</strong>, Everything about MySQL Shell!<br />
 								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NWM1Y3Y1cTlkNDVqM2x1NGkzdTRmdmUxb28gcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://zoom.us/j/7366481911">Zoom link</a>
 							 </li>
 							</ul>
 							
-							<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggest a new topic</a>.
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggest a new topic!</a>
 						</div>
 					</section>
+
+
+                                        <section id="past" class="wrapper style1">
+                                                <header>
+                                                        <h2>Past Presentations</h2>
+                                                </header>
+                                                <div class="content">
+                                                        <ul>
+                                                                <li><iframe width="560" height="315" src="https://www.youtube.com/embed/PxS5h-eaE9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                                                        </ul>
+                                                </div>
+                                        </section>
+
 
 		</section>
 
