Added lefred recording, new presenters

--- a/index.html
+++ b/index.html
@@ -78,9 +78,17 @@
 
 							<ul>
 							 <li>
-								Tuesday April 21st at 8AM-9AM PST<br />
-								<strong>Frédéric Descamps (aka Lefred)</strong>, Everything about MySQL Shell!<br />
-								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NWM1Y3Y1cTlkNDVqM2x1NGkzdTRmdmUxb28gcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://zoom.us/j/7366481911">Zoom link</a>
+								Tuesday May 5th at 8AM-9AM PT<br />
+								<strong>René Cannaò and Nick Vyzas</strong>, ProxySQL!<br />
+								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=M2JsNmFhaGQ1Zzh1OGltOTVydmp1czl2dGUgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/hdg-xxgz-wqy">Google Meet link</a>
+							 </li>
+							</ul>
+
+							<ul>
+							 <li>
+								Tuesday May 5th at 8AM-9AM PT<br />
+								<strong>Shlomi Noach</strong>, Orchestrator!<br />
+								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGNqbDY1YTcxZjJmY2ZnZGhkM2VwM3FtbGogcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/wvn-aejw-rij">Google Meet link</a>
 							 </li>
 							</ul>
 							
@@ -95,7 +103,10 @@
                                                 </header>
                                                 <div class="content">
                                                         <ul>
-                                                                <li><iframe width="560" height="315" src="https://www.youtube.com/embed/PxS5h-eaE9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                                                                <li><iframe width="728" height="410" src="https://www.youtube.com/embed/NVY9GQ0C9JA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                                                        </ul>
+                                                        <ul>
+                                                                <li><iframe width="728" height="410" src="https://www.youtube.com/embed/PxS5h-eaE9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
                                                         </ul>
                                                 </div>
                                         </section>
