--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					</section>
 
 					<section id="two" class="wrapper style2">
-
+						<a name="schedule"></a>
 						<header>
 							<h2>Schedule</h2>
 							<p><a href="https://calendar.google.com/calendar/embed?src=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com&ctz=America%2FEdmonton">Upcoming Events</a></p>
@@ -98,6 +98,7 @@
 
 
                                         <section id="past" class="wrapper style1">
+						<a name="history"></a>
                                                 <header>
                                                         <h2>Past Presentations</h2>
                                                 </header>
