Added video for proxysql

--- a/index.html
+++ b/index.html
@@ -14,120 +14,106 @@
 	<body>
 
 		<!-- Header -->
-			<header id="header">
-				<div class="logo"><a href="#">DB AMA<span></span></a></div>
-			</header>
+		<header id="header">
+			<div class="logo"><a href="#">DB AMA</a></div>
+		</header>
 
 		<!-- Main -->
-			<section id="main">
-				<div class="inner">
+		<section id="main">
+			<div class="inner">
 
 				<!-- One -->
-					<section id="one" class="wrapper style1">
+				<section id="one" class="wrapper style1">
 
-						<div class="image fit flush">
-							<img src="images/dolphins.jpeg" alt="" />
-						</div>
-						<header class="special">
-							<h2>Introduction</h2>
-							<p>The backstory on our format</p>
-						</header>
-						<div class="content">
+					<div class="image fit flush">
+						<img src="images/dolphins.jpeg" alt="" />
+					</div>
+					<header class="special">
+						<h2>Introduction</h2>
+						<p>The backstory on our format</p>
+					</header>
+					<div class="content">
 
-							<p>With offline events canceled right now, as speakers we wanted to experiment with a new online format. We crave the good questions and hallway conversations that <em>online</em> doesn't usually deliver. The format we want to try involves <strong>Facilitators</strong> (<em>presenters</em>) and <strong>Panelists</strong> (<em>attendees</em>).</p>
+						<p>With offline events canceled right now, as speakers we wanted to experiment with a new online format. We crave the good questions and hallway conversations that <em>online</em> doesn't usually deliver. The format we want to try involves <strong>Facilitators</strong> (<em>presenters</em>) and <strong>Panelists</strong> (<em>attendees</em>).</p>
 
-							<h3>Facilitators</h3>
+						<h3>Facilitators</h3>
 
-							<p>
+						<p>
 							<ul>
-							 <li>Lead discussion on a topic in which you are a subject matter expert</li>
-							 <li>Present demos <em>(it's okay to fail)</em></li>
-							 <li>Encourage discussion, and questions from panelists</li>
+								<li>Lead discussion on a topic in which you are a subject matter expert</li>
+								<li>Present demos <em>(it's okay to fail)</em></li>
+								<li>Encourage discussion, and questions from panelists</li>
 							</ul>
 
 							<em>Facilitators are encouraged <strong>not</strong> to use slides. We value your unique expertise over a polished presentation. It is the role of the panelist to come prepared and ask the right questions!</em>
-							</p>
+						</p>
 
-							<p>
+						<p>
 							<h3>Panelists</h3>
 
 							<ul>
-							 <li>Have a working mic and video!</li>
-							 <li>Jump in and ask questions, answer questions and drive a good conversation.</li>
+								<li>Have a working mic and video!</li>
+								<li>Jump in and ask questions, answer questions and drive a good conversation.</li>
 							</ul>
 
 							<em>Panelists are not expected to be experts, and even if you are... leading questions are encouraged to help the flow of conversation. We just want you to participate!</em>
-							</p>
+						</p>
 
-							<div id="disclaimer">
-
-								<p><strong>Both Facilitators and Panelists agree to be recorded. Videos will be posted here at a later date.</strong></p>
-
-							</div>
-
+						<div id="disclaimer">
+							<p><strong>Both Facilitators and Panelists agree to be recorded. Videos will be posted here at a later date.</strong></p>
 						</div>
-					</section>
 
-					<section id="two" class="wrapper style2">
-						<a name="schedule"></a>
-						<header>
-							<h2>Schedule</h2>
-							<p><a href="https://calendar.google.com/calendar/embed?src=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com&ctz=America%2FEdmonton">Upcoming Events</a></p>
-						</header>
-						<div class="content">
+					</div>
+				</section>
 
-							<ul>
-							 <li>
-								Tuesday May 5th at 8AM-9AM PT<br />
-								<strong>René Cannaò and Nick Vyzas</strong>, ProxySQL!<br />
-								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=M2JsNmFhaGQ1Zzh1OGltOTVydmp1czl2dGUgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/hdg-xxgz-wqy">Google Meet link</a>
-							 </li>
-							</ul>
-
-							<ul>
-							 <li>
+				<section id="two" class="wrapper style2">
+					<a name="schedule"></a>
+					<header>
+						<h2>Schedule</h2>
+						<p><a href="https://calendar.google.com/calendar/embed?src=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com&ctz=America%2FEdmonton">Upcoming Events</a></p>
+					</header>
+					<div class="content">
+						<ul>
+							<li>
 								Tuesday May 19th at 8AM-9AM PT<br />
 								<strong>Shlomi Noach</strong>, Orchestrator!<br />
 								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGNqbDY1YTcxZjJmY2ZnZGhkM2VwM3FtbGogcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/wvn-aejw-rij">Google Meet link</a>
-							 </li>
-							</ul>
-							
-							<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggest a new topic!</a>
-						</div>
-					</section>
+							</li>
+						</ul>
 
+						<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggest a new topic!</a>
+					</div>
+				</section>
 
-                                        <section id="past" class="wrapper style1">
-						<a name="history"></a>
-                                                <header>
-                                                        <h2>Past Presentations</h2>
-                                                </header>
-                                                <div class="content">
-                                                        <ul>
-                                                                <li><iframe width="728" height="410" src="https://www.youtube.com/embed/NVY9GQ0C9JA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-                                                        </ul>
-                                                        <ul>
-                                                                <li><iframe width="728" height="410" src="https://www.youtube.com/embed/PxS5h-eaE9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-                                                        </ul>
-                                                </div>
-                                        </section>
-
-
+				<section id="past" class="wrapper style1">
+					<a name="history"></a>
+					<header>
+						<h2>Past Presentations</h2>
+					</header>
+					<div class="content" align="center">
+						<ul>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/Op8FzXsNgiU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/NVY9GQ0C9JA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/PxS5h-eaE9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+						</ul>
+					</div>
+				</section>
+			</div>
 		</section>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="copyright">
-					Theme based on <a href="https://unsplash.com">Caminar</a> with customizations.
-				</div>
-			</footer>
+		<footer id="footer">
+			<div class="copyright">
+				Theme based on <a href="https://unsplash.com">Caminar</a> with customizations.
+			</div>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
