Add new presentations
Signed-off-by: Morgan Tocker <tocker@gmail.com>

--- a/index.html
+++ b/index.html
@@ -75,9 +75,19 @@
 					<div class="content">
 						<ul>
 							<li>
-								Tuesday May 19th at 8AM-9AM PT<br />
+								Tuesday May 26th at 8AM-9AM PT<br />
 								<strong>Shlomi Noach</strong>, Orchestrator!<br />
 								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGNqbDY1YTcxZjJmY2ZnZGhkM2VwM3FtbGogcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/wvn-aejw-rij">Google Meet link</a>
+							</li>
+							<li>
+								Tuesday June 2nd at 8AM-9AM PT<br />
+								<strong>Dave Stokes</strong>, JSON_TABLE and JSON Document Validation<br />
+								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NWk4bnVuNG40Z29ocTZlaTdlN3U5bm5hMTQgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/yix-yjxb-qwc">Google Meet link</a>
+							</li>
+							<li>
+								Tuesday June 16th at 8AM-9AM PT<br />
+								<strong>Giuseppe Maxia</strong>, DBdeployer<br />
+								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NGtmcThvam1kcGFnZW1ibGw5ZGRkOW9sMzEgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/ces-qqjt-wra">Google Meet link</a>
 							</li>
 						</ul>
 
