--- a/index.html
+++ b/index.html
@@ -75,11 +75,6 @@
 					<div class="content">
 						<ul>
 							<li>
-								Tuesday May 26th at 8AM-9AM PT<br />
-								<strong>Shlomi Noach</strong>, Orchestrator!<br />
-								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGNqbDY1YTcxZjJmY2ZnZGhkM2VwM3FtbGogcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/wvn-aejw-rij">Google Meet link</a>
-							</li>
-							<li>
 								Tuesday June 2nd at 8AM-9AM PT<br />
 								<strong>Dave Stokes</strong>, JSON_TABLE and JSON Document Validation<br />
 								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NWk4bnVuNG40Z29ocTZlaTdlN3U5bm5hMTQgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/yix-yjxb-qwc">Google Meet link</a>
@@ -102,6 +97,7 @@
 					</header>
 					<div class="content" align="center">
 						<ul>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/UngtSlZ1iTQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/Op8FzXsNgiU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/NVY9GQ0C9JA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/PxS5h-eaE9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
