Add contact details

--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/PxS5h-eaE9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 						</ul>
 					</div>
-				</section>
+				</section> <!-- // history -->
+
+				<section id="past" class="wrapper style1"> <!-- contact -->
+					<a name="contact"></a>
+					<div class="content" align="center">
+						<p>DB AMA is organized by <a href="https://twitter.com/morgo">@morgo</a>, <a href="https://twitter.com/lefred">@lefred</a> and <a href="https://twitter.com/lizztheblizz">@lizztheblizz</a> and created with the support of <a href="https://www.planetscale.com/">PlanetScale</a>.</p>
+
+						<p>We can be reached in <code>#dbama</code> on the <a href="https://lefred.be/mysql-community-on-slack/">MySQL Community Slack</a>.</p>
+					</div>
+				</section> <!-- // history -->
+
 			</div>
 		</section>
 
