Add Norvald upcoming, giuseppe video

--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
 					</header>
 					<div class="content">
 						<ul>
-							<li>
-								Tuesday June 16th at 8AM-9AM PT<br />
-								<strong>Giuseppe Maxia</strong>, DBdeployer<br />
-								<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NGtmcThvam1kcGFnZW1ibGw5ZGRkOW9sMzEgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/ces-qqjt-wra">Google Meet link</a>
+							<li>Tuesday June 30th at 8AM-9AM PT<br />
+							<strong>Norvald Ryeng</strong>, Query Profiling<br />
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NzQxdTQ2dGxtMnAya2M0MDhpZDlpNzZpOHIgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/hsw-gygi-tbm">Google Meet link</a>
 							</li>
 						</ul>
 
@@ -92,6 +91,7 @@
 					</header>
 					<div class="content" align="center">
 						<ul>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/USQuHXizvdk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/bdAT9KiTYqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/UngtSlZ1iTQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/Op8FzXsNgiU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
