--- a/index.html
+++ b/index.html
@@ -70,13 +70,17 @@
 					<a name="schedule"></a>
 					<header>
 						<h2>Schedule</h2>
-						<p><a href="https://calendar.google.com/calendar/embed?src=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com&ctz=America%2FEdmonton">Upcoming Events</a></p>
+						<p><a href="https://calendar.google.com/calendar/b/0?cid=ZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Upcoming Events</a></p>
 					</header>
 					<div class="content">
 						<ul>
-							<li>Tuesday June 30th at 8AM-9AM PT<br />
-							<strong>Norvald Ryeng</strong>, Query Profiling<br />
-							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NzQxdTQ2dGxtMnAya2M0MDhpZDlpNzZpOHIgcGxhbmV0c2NhbGUuY29tX3ZlYjk4NnA2anFrMGhibGU0cGhqMnBiamowQGc&tmsrc=planetscale.com_veb986p6jqk0hble4phj2pbjj0%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/hsw-gygi-tbm">Google Meet link</a>
+							<li>Tuesday July 14th at 8AM-9AM PT<br />
+							<strong>Marcos Albe</strong>, BCC - Tools for BPF-based Linux IO analysis<br />
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MzExNnFhdmoxdm1ya3N2ZTZwaWdobmp2ODcgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/qgg-zixs-mvf">Google Meet link</a>
+							</li>
+							<li>Tuesday July 28th at 8AM-9AM PT<br />
+							<strong>Michael Coburn</strong>, Percona Monitoring and Management (PMM)<br />
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGpyMWJnNHFnY2Zlb2puMXZyNGxpZDg2NnUgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/qod-fatq-hfk">Google Meet link</a>
 							</li>
 						</ul>
 
@@ -91,6 +95,7 @@
 					</header>
 					<div class="content" align="center">
 						<ul>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/hKGWdqlEt98" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/USQuHXizvdk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/bdAT9KiTYqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/UngtSlZ1iTQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
