--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</header>
 					<div class="content">
 						<ul>
-							<li>Tuesday July 14th at 8AM-9AM PT<br />
+							<li>Tuesday July 21st at 8AM-9AM PT<br />
 							<strong>Marcos Albe</strong>, BCC - Tools for BPF-based Linux IO analysis<br />
 							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MzExNnFhdmoxdm1ya3N2ZTZwaWdobmp2ODcgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/qgg-zixs-mvf">Google Meet link</a>
 							</li>
