--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
 							<strong>Michael Coburn</strong>, Percona Monitoring and Management (PMM)<br />
 							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGpyMWJnNHFnY2Zlb2puMXZyNGxpZDg2NnUgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/qod-fatq-hfk">Google Meet link</a>
 							</li>
+							<li>Tuesday August 11th at 8AM-9AM PT<br />
+							<strong>Evan Elias</strong>, Skeema<br />
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=M3M3OWNoZG5vMGluN2hicHZnanVxMW5pcTggZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/aty-tisz-qpo">Google Meet link</a>
+							</li>
 						</ul>
 
 						<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggest a new topic!</a>
