--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<ul>
 							<li>Tuesday July 28th at 8AM-9AM PT<br />
 							<strong>Michael Coburn</strong>, Percona Monitoring and Management (PMM)<br />
-							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGpyMWJnNHFnY2Zlb2puMXZyNGxpZDg2NnUgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/qod-fatq-hfk">Google Meet link</a>
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGpyMWJnNHFnY2Zlb2puMXZyNGxpZDg2NnUgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="http://meet.google.com/qoo-qsvd-rhi">Google Meet link</a>
 							</li>
 							<li>Tuesday August 11th at 8AM-9AM PT<br />
 							<strong>Evan Elias</strong>, Skeema<br />
