--- a/index.html
+++ b/index.html
@@ -74,10 +74,6 @@
 					</header>
 					<div class="content">
 						<ul>
-							<li>Tuesday July 28th at 8AM-9AM PT<br />
-							<strong>Michael Coburn</strong>, Percona Monitoring and Management (PMM)<br />
-							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGpyMWJnNHFnY2Zlb2puMXZyNGxpZDg2NnUgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="http://meet.google.com/qoo-qsvd-rhi">Google Meet link</a>
-							</li>
 							<li>Tuesday August 11th at 8AM-9AM PT<br />
 							<strong>Evan Elias</strong>, Skeema<br />
 							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=M3M3OWNoZG5vMGluN2hicHZnanVxMW5pcTggZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/aty-tisz-qpo">Google Meet link</a>
@@ -95,6 +91,7 @@
 					</header>
 					<div class="content" align="center">
 						<ul>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/jk1v8rdNYNI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/0enuunciPoA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/hKGWdqlEt98" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/USQuHXizvdk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
