--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 						<ul>
 							<li>Tuesday August 11th at 8AM-9AM PT<br />
 							<strong>Evan Elias</strong>, Skeema<br />
-							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=M3M3OWNoZG5vMGluN2hicHZnanVxMW5pcTggZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/aty-tisz-qpo">Google Meet link</a>
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=M3M3OWNoZG5vMGluN2hicHZnanVxMW5pcTggZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/dhy-jvqo-xhh">Google Meet link</a>
+							</li>
+							<li>Tuesday August 25th at 8AM-9AM PT<br />
+							<strong>Kenny Gryp</strong>, MySQL Shell Dump/Load<br />
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MDQ3dWJoaXY2cWRkc2V2aWQzdG9kOGVsaGkgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/fgc-agyh-cmj">Google Meet link</a>
 							</li>
 						</ul>
 
