Add google meet link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<ul>
 							<li>Tuesday September 8th at 8AM-9AM PT<br />
 							<strong>Miguel Araújo</strong>, MySQL InnoDB Cluster and ReplicaSet<br />
-							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGNtYXAwZjYza2M2bmRpNWIwNjZqNmVmMWQgdG9ja2VyQG0&tmsrc=tocker%40gmail.com">Calendar Invite</a>
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGNtYXAwZjYza2M2bmRpNWIwNjZqNmVmMWQgdG9ja2VyQG0&tmsrc=tocker%40gmail.com">Calendar Invite</a> <a href="https://meet.google.com/zhi-cdow-pxh">Google Meet</a>
 							</li>
 						</ul>
 
