--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 					</header>
 					<div class="content">
 						<ul>
-							<li>Tuesday September 8th at 8AM-9AM PT<br />
-							<strong>Miguel Araújo</strong>, MySQL InnoDB Cluster and ReplicaSet<br />
-							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MGNtYXAwZjYza2M2bmRpNWIwNjZqNmVmMWQgdG9ja2VyQG0&tmsrc=tocker%40gmail.com">Calendar Invite</a> <a href="https://meet.google.com/zhi-cdow-pxh">Google Meet</a>
+							<li>Tuesday September 22nd at 8AM-9AM PT<br />
+							<strong>To be announced</strong>, Coming soon :-)<br />
+							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=Mmk1NzdmN2Izc24yZ2U3aWE3czNmdGdiZ2IgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a>
 							</li>
 						</ul>
 
@@ -91,6 +91,7 @@
 					</header>
 					<div class="content" align="center">
 						<ul>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/AsfFY555LCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/QPWOv-UQR9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/ZbTzWR64sUc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/jk1v8rdNYNI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
