--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
 					</header>
 					<div class="content">
 						<ul>
-							<li>Tuesday September 22nd at 8AM-9AM PT<br />
-							<strong>Justin Swanhart</strong>, Warp Storage Engine<br />
-							<a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=Mmk1NzdmN2Izc24yZ2U3aWE3czNmdGdiZ2IgZmJwdDJ0c2NxMmhncDQ0bDcxNjhia21kY2NAZw&tmsrc=fbpt2tscq2hgp44l7168bkmdcc%40group.calendar.google.com">Calendar Invite</a> <a href="https://meet.google.com/wwh-gfey-ndr?authuser=1">Google Meet</a>
+							<li>Tuesday October 6th at 8AM-9AM PT<br />
+							<strong>To be announced</strong>, Coming Soon!<br />
 							</li>
 						</ul>
 
@@ -91,6 +90,7 @@
 					</header>
 					<div class="content" align="center">
 						<ul>
+							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/21zY8h6c3ek" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/AsfFY555LCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/QPWOv-UQR9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li><iframe width="728" height="410" src="https://www.youtube.com/embed/ZbTzWR64sUc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
