--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
 					</header>
 					<div class="content">
 						<ul>
-							<li>Tuesday October 20th at 8AM-9AM PT<br />
-							<strong>To be announced</strong>, Coming Soon!<br />
-							</li>
+							<li>We're taking a break. We'll be back in January 2021 with more AMAs.</li>
 						</ul>
 
 						<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOh63EJFprzfCsLMpXmvUZtg8VsVl148oBlKAu6AnHYFdTxQ/viewform?usp=sf_link">Suggest a new topic!</a>
